# CORE

./: .gitignore  README.md
.github/workflows/: release.yml
src/: app.js  core.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/sounds/: arranque.flac
