[package]
# «core» a secas está vedado como nombre de paquete (choca con el crate
# built-in de Rust): el paquete es core-app y el binario sí se llama core.
name = "core-app"
version = "0.1.2"
edition = "2021"
description = "Core — navegador-lector mínimo en papel y tinta (Tauri 2, multiwebview)"
license = "MIT"

[[bin]]
name = "core"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`: necesario para crear una ventana con varios webviews hijos
# (la barra propia arriba y el contenido web debajo).
# `webview-data-url`: la página en blanco de inicio es una data: URL.
tauri = { version = "2", features = ["unstable", "webview-data-url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
